# AdaptiveThemeLib

./: CMakeLists.txt  LICENSE.md  README.md  library.h
include/: palettemanager.h  qssmanager.h  themediconmanager.h  thememanager.h
resources/: modern.qss  resources.qrc
resources/qss/: classic.qss  material.qss
src/: palettemanager.cpp  qssmanager.cpp  themediconmanager.cpp  thememanager.cpp
tests/: CMakeLists.txt  test_main.cpp  test_palettemanager.cpp  test_qssmanager.cpp  test_themediconmanager.cpp  test_thememanager.cpp
